--- a/SWmonitor/style.css
+++ b/SWmonitor/style.css
@@ -2,6 +2,19 @@
 body {
 	width: 70%; 
 	margin: auto;
+        vertical-align: middle;
+	font-family: arial;
+	font-size: 150%;
+}
+
+a {
+  display: block;
+  float: left;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  font-size: 22px
+  font-family: sans-serif;
 }
 
 a:link {
@@ -13,19 +26,21 @@ a:visited {
 }
 
 a:hover {
-  color: blue;
+  color: #46638B;
+  background-color: #ccc;
 }
 
 a:active {
   color: teal;
 }
 
+
 #navigation {
   
 }
 
 p {
-  font-size: 120%;
+  font-size: 80%;
   color: dimgray;
 }
 
@@ -39,21 +54,8 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: #FFFFFF;
-  font-family: sans-serif;
 }
 
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: right;
-  padding: 10px 20px;
-  text-decoration: none;
-  font-size: 22px
-}
 
 /* Change the link color to grey on hover */
 li a:hover {
@@ -65,6 +67,16 @@ height: 2px;
 margin-left: auto;
 margin-right: auto;
 background-color:#46638B;
+}
+
+a.external{
+  display: inline;
+  float: none;
+  color: #000;
+  padding: 0px 0px;
+  text-decoration: none;
+  font-size: 22px
+  font-family: sans-serif;
 }
 
 
@@ -80,3 +92,4 @@ body.geomagnetic a.geomagnetic:visited {
   background-color: #46638B;
   font-weight:bold
 }
+
